# jobserver

./: .coveragerc  .gitignore  .travis.yml  ACCEPTANCE.md  CHANGELOG.md  FUTURE.md  MAKEFLAGS.md  MANIFEST.in  README-PyPI.md  README.md  ci  fork.py  jobserver.py  measure_coverage.py  pyproject.toml  test_design_shortcoming.py
.circleci/: config.yml
acceptance/: conftest.py  helpers.py  run.sh  test_01_baseline_jobserver.py  test_02_baseline_executor.py  test_03_concurrency_slots.py  test_04_high_throughput.py  test_05_large_payloads.py  test_06_work_exceptions.py  test_07_process_death.py  test_08_blocked_timeouts.py  test_09_executor_exceptions.py  test_10_callbacks_normal.py  test_11_callbacks_errors.py  test_12_callbacks_reentrant.py  test_13_callbacks_threaded.py  test_14_resource_exhaustion.py  test_15_timing_attacks.py  test_16_nested_submission.py  test_17_sleep_fn.py  test_18_pickling.py  test_19_env_preexec.py  test_20_executor_cancellation.py  test_21_executor_shutdown.py  test_22_executor_throughput.py  test_23_dispatcher_crash.py  test_24_context_compat.py  test_25_chaos_jobserver.py  test_26_chaos_executor.py  test_27_soak.py
draft/: CONSTRAINTS.md  CONSUME.md  HARDEN.md  JSLOCK.md  MAKEFLAGS.md  _request.py  _response.py  bench.py  executor.py  render_readme_pypi.py  test.py  test_executor.py  test_harden.py
examples/: basic.py  callbacks.py  environ.py  errors.py  ex01_basic.py  ex02_lifecycle.py  ex03_nested.py  ex04_cancel.py  ex04_death.py  ex04_sleep_fn.py  ex05_callbacks.py  ex05_death.py  ex05_sleep_fn.py  ex06_callbacks.py  ex06_sleep.py  ex06_sleep_fn.py  ex07_callbacks.py  ex07_environment.py  ex07_preexec_fn.py  ex08_environment.py  ex08_preexec_fn.py  ex08_timeouts.py  ex09_pdeathsig.py  ex09_preexec.py  ex09_preexec_fn.py  ex09_timeouts.py  ex10_executor.py  ex10_pdeathsig.py  ex10_timeouts.py  ex11_executor.py  ex11_pdeathsig.py  ex12_executor.py  ex1_basic.py  ex2_callbacks.py  ex2_nested.py  ex3_death.py  ex3_nested.py  ex4_nonblocking.py  ex4_sleep_fn.py  ex5_callbacks.py  (+10 more)
jobserver/: HARDEN.md  HARDENING.md  __init__.py  _executor.py  _jobserver.py  _queue.py  _request.py  _response.py  executor.py  impl.py  test.py  test_executor.py  test_jobserver.py  test_queue.py
jobserver/demo/: __init__.py  basic.py  nested.py
jobserver/example/: __init__.py  basic.py  callbacks.py  environ.py  errors.py  gating.py  nonblocking.py
src/jobserver/: __init__.py  _compat.py  _executor.py  _jobserver.py  _queue.py  _request.py  _response.py
test/: helpers.py  test_design.py  test_design_consume.py  test_design_fork_selector.py  test_design_jobserver.py  test_executor_basic.py  test_executor_concurrency.py  test_executor_lifecycle.py  test_jobserver_basic.py  test_jobserver_callbacks.py  test_jobserver_concurrency.py  test_jobserver_design.py  test_jobserver_map.py  test_jobserver_slots.py  test_jobserver_traceback.py  test_jobserver_warnings.py  test_jobserver_worker.py  test_py_typed.py  test_queue.py  test_repr.py  test_resource_warning.py  test_setstate.py  test_str_repr.py  test_version.py
tests/: helpers.py  test_executor.py  test_executor_basic.py  test_executor_concurrency.py  test_executor_lifecycle.py  test_jobserver.py  test_jobserver_basic.py  test_jobserver_callbacks.py  test_jobserver_concurrency.py  test_jobserver_map.py  test_jobserver_worker.py  test_queue.py
