[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jobserver"
dynamic = ["version"]
authors = [
    {name = "Rhys Ulerich", email = "rhys.ulerich@gmail.com"},
]
description = "A nestable Jobserver with thread-safe futures, callbacks, and complete type-hinting"
readme = "README.md"
license = "MPL-2.0"
requires-python = ">=3.9"
keywords = [
    "concurrency",
    "futures",
    "jobserver",
    "multiprocessing",
    "parallel",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/RhysU/jobserver"
Repository = "https://github.com/RhysU/jobserver"
Issues = "https://github.com/RhysU/jobserver/issues"

[tool.black]
line-length = 79
target-version = ["py39", "py310", "py311", "py312", "py313", "py314"]

# NB: Typehinting tests are tedious relative to the benefits they provide.
[tool.mypy]
files = ["src", "examples"]  # test/ deliberately excluded

[tool.setuptools_scm]

[tool.setuptools.packages.find]
where = ["src"]
include = ["jobserver*"]

[tool.ruff]
line-length = 79
target-version = "py39"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP", "W"]

[tool.ruff.lint.isort]
known-first-party = ["jobserver"]
